syntax = "proto3";

import "enums.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Moshaveran.API.Mqtt.GrpcServices.Protos";


package MqttProtos;

service MqqtReceiveService {
	rpc PayloadReceived(PayloadReceivedParams) returns (PayloadReceivedResult);
	rpc ClientConnected(ClientConnectedArgs) returns (google.protobuf.Empty);
	rpc ClientDisconnected(ClientDisconnectedArgs) returns (google.protobuf.Empty);
}

message PayloadReceivedParams  {
	string IMEI = 1;
	google.protobuf.Timestamp Time = 2;
	SaveStatus SaveStatus = 3;
	string Log = 4;
	string BrokerType = 5;
}

message PayloadReceivedResult {
	string Message = 1;
	PayloadReceivedStatus Status = 2;
}

message ClientConnectedArgs{
	google.protobuf.Timestamp Time = 2;
	string ClientId = 1;
}
message ClientDisconnectedArgs{
	google.protobuf.Timestamp Time = 2;
	string ClientId = 1;
}